# xen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  skills-lock.json
.github/workflows/: release.yml
crates/harness-locate/: CHANGELOG.md  Cargo.toml  README.md
crates/harness-locate/src/: detection.rs  error.rs  lib.rs  mcp.rs  skill.rs  types.rs  validation.rs
crates/harness-locate/src/harness/: amp_code.rs  claude_code.rs  copilot_cli.rs  crush.rs  droid.rs  goose.rs  mcp_parse.rs  mod.rs  opencode.rs
crates/harness-locate/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/skills-locate/: CHANGELOG.md  Cargo.toml  README.md
crates/skills-locate/src/: detect.rs  discovery.rs  error.rs  fetch.rs  github.rs  lib.rs  marketplace.rs  registry.rs  types.rs
crates/skills-locate/src/component/: agent.rs  command.rs  hook.rs  manifest.rs  mcp.rs  mod.rs  npm.rs  python.rs  skill.rs
crates/xen/: Cargo.toml
crates/xen/src/: error.rs  main.rs
crates/xen/src/cli/: commands.rs  config_cmd.rs  install.rs  profile.rs  status.rs
crates/xen/src/config/: jsonc.rs  mod.rs  profile_name.rs
crates/xen/src/config/manager/: files.rs  lifecycle.rs  mod.rs
crates/xen/src/config/manager/extraction/: mod.rs
crates/xen/src/display/: mod.rs
crates/xen/src/harness/: install_instructions.rs  mod.rs
crates/xen/src/install/: installer.rs  mcp_config.rs  mcp_installer.rs  mod.rs  types.rs  uninstaller.rs
crates/xen/src/tui/: mod.rs  theme.rs
crates/xen/src/tui/views/: cards.rs  dashboard.rs  mod.rs
crates/xen/src/tui/widgets/: card_grid.rs  detail_pane.rs  empty_state.rs  harness_tabs.rs  profile_card.rs  status_bar.rs
scripts/: install.sh  setup.sh
src/: error.rs  main.rs
src/cli/: commands.rs  config_cmd.rs  init.rs  migrate.rs  mod.rs  output.rs  profile.rs  status.rs  tui.rs  uninstall.rs
src/config/: mod.rs  types.rs  xen.rs
src/config/manager/: files.rs  mod.rs
src/display/: mod.rs
src/harness/: display.rs  install_instructions.rs  mod.rs
src/install/: discovery.rs  installer.rs  manifest.rs  mcp_config.rs  mcp_installer.rs  mod.rs  types.rs  uninstaller.rs
src/tui/: mod.rs
src/tui/widgets/: mod.rs  profile_table.rs
tests/: cli_integration.rs  mcp_installation.rs
