[package]
name = "skills-locate"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill discovery and fetching for AI coding agents"
readme = "README.md"
keywords = ["ai", "skills", "plugins", "mcp", "agents"]
categories = ["development-tools", "config"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true }
harness-locate = { workspace = true }
toml = { workspace = true }
