[package]
name = "xen"
version.workspace = true
edition.workspace = true
description = "Unified configuration manager for AI coding assistants (Claude Code, OpenCode, Goose, AMP Code)"
license.workspace = true
readme = "../../README.md"
keywords = ["ai", "cli", "configuration", "tui", "mcp"]
categories = ["command-line-utilities", "config", "development-tools"]
authors.workspace = true

[[bin]]
name = "xen"
path = "src/main.rs"

[dependencies]
harness-locate.workspace = true
skills-locate.workspace = true

# CLI
clap.workspace = true
dialoguer.workspace = true
dialoguer-multiselect.workspace = true

# Serialization
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true
color-eyre.workspace = true

# Utilities
chrono.workspace = true
textwrap.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true
colored.workspace = true

[features]
default = []
tui-cards = []

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
